--- a/search.html
+++ b/search.html
@@ -3,6 +3,7 @@ layout: page
 title: Tìm kiếm
 js: ["lunr.min.js","search.js"]
 css: ["page.css","search.css"]
+maths: 1
 ---
 	
 {% include search_form.html %}
