--- a/tags.html
+++ b/tags.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: "Bài đăng theo thẻ"
-css: ["tags.css","page.css"]
+title: Posts by tags
+css: ["page.css"]
 ---
 
 <div style="margin-bottom: 1rem;">
-	Nhấn vào thẻ bạn muốn xem các bài đăng.
+	Click on tag you wanna see the posts.
 </div>
 
 <div class="col s12 tag-div">
