add thi homepage link

--- a/files/ML-coursera/note/index.html
+++ b/files/ML-coursera/note/index.html
@@ -1,3 +1,5 @@
+---
+---
 <html>
 <head>
   <title>Machine Learning - complete course notes</title>
@@ -9,10 +11,10 @@
 <body>
  <div class="msg">
 
-	<a href="http://holehouse.org"> Home</a>
+  <a href="http://holehouse.org"> Home of this note</a>
+  <a href="{{site.url}}{{site.baseurl}}"> Thi's note homepage</a>
 
- </div><!-- // .msg2 -->
-
+ </div>
 <h1>Stanford Machine Learning</h1>
 <p>
 The following notes represent a complete, stand alone interpretation of Stanford&#39;s machine learning course presented by 
